tests/functional/lang/eval-fail/fetchurl-baseName-attrs.err.exp
error:
       … while calling the 'fetchurl' builtin
         at /pwd/lang/eval-fail/fetchurl-baseName-attrs.nix:1:1:
            1| builtins.fetchurl { url = "https://example.com/~wiggle~"; }
             | ^
            2|

       error: invalid store path name when fetching URL 'https://example.com/~wiggle~': name '~wiggle~' contains illegal character '~'. Please add a valid 'name' attribute to the argument for 'fetchurl', so that it can create a valid store path.
